--- a/src/index.html
+++ b/src/index.html
@@ -78,19 +78,20 @@
         <div class="col-md"><img class="img-fluid" src="./assets/img/fundamentals.svg" alt=""/></div>
         <div class="col-md p-5">
           <h2>Learn The Fundamentals</h2>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim asperiores vitae, assumenda maxime ullam!</p><a class="btn btn-light mt-3" href="#">Read More<i class="bi">bi-chevron-right<a class="btn btn-primary" href="#">Read More </a></i></a>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim asperiores vitae, assumenda maxime ullam!</p><a class="btn btn-primary mt-3" href="#">Read More<i class="bi bi-chevron-right"></i></a>
         </div>
       </div>
     </section>
-    <section class="p-5 bg-dark" id="learn">
+    <section class="p-5 bg-dark text-light" id="learn">
       <div class="container row align-items-center justify-content-between">
         <div class="col-md p-5">
-          <h2>Learn The Fundamentals</h2>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim asperiores vitae, assumenda maxime ullam!</p><a class="btn btn-light mt-3" href="#">Read More<i class="bi">bi-chevron-right</i></a>
+          <h2>Learn React</h2>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim asperiores vitae, assumenda maxime ullam!</p><a class="btn btn-light mt-3" href="#">Read More<i class="bi bi-chevron-right"></i></a>
         </div>
         <div class="col-md"><img class="img-fluid" src="./assets/img/react.svg" alt=""/></div>
       </div>
     </section>
+    <section class="p-5" id="questions"></section>
     <script type="module" src="./assets/js/main.js"></script>
   </body>
 </html>
