--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
           <div>
             <h1>Become a <span class="text-warning">Web Developer</span></h1>
             <p class="lead my-4">We focus on teaching our students the fundamentals of the latest and greatest technologies to prepare them for their first dev role</p>
-            <button class="btn btn-primary btn-lg">Start the Enrollment</button>
+            <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Start the Enrollment</button>
           </div><img class="img-fluid w-50 d-none d-sm-block" src="./assets/img/showcase.svg" alt=""/>
         </div>
       </div>
@@ -202,11 +202,52 @@
               </li>
             </ul>
           </div>
-          <div class="col-md"></div>
+          <div class="col-md">
+            <div id="map" style="width: 400px; height: 300px;"></div>
+          </div>
         </div>
       </div>
     </section>
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"> </script>
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+      <div class="container">
+        <p class="lead">Copyright &copy 2021 Frontend Bootcamp</p><a class="position-absolute bottom-0 end-0 p-5" href="#"> <i class="bi bi-arrow-up-circle h1"></i></a>
+      </div>
+    </footer>
+    <div class="modal" tab="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal Title</h5>
+            <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <p class="lead">Fill Out this form and we will get back to you </p>
+            <form>
+              <div class="mb-3">
+                <label class="col-form-label" for="first-name">First Name:</label>
+                <input class="form-control" id="first-name"/>
+              </div>
+              <div class="mb-3">
+                <label class="col-form-label" for="last-name">Last Name:</label>
+                <input class="form-control" id="last-name"/>
+              </div>
+              <div class="mb-3">
+                <label class="col-form-label" for="email">Email:</label>
+                <input class="form-control" id="email"/>
+              </div>
+              <div class="mb-3">
+                <label class="col-form-label" for="phone">Phone:</label>
+                <input class="form-control" id="phone"/>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Close</button>
+            <button class="btn btn-primary" type="button">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script type="module" src="./assets/js/main.js"></script>
   </body>
 </html>
