--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./assets/scss/main.css"/>
     <title>Frontend Bootcamp</title>
     <link rel="stylesheet" href="./assets/scss/main.scss"/>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet"/>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"/>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css"/>
   </head>
   <body> 
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
